--- a/index.html
+++ b/index.html
@@ -5,26 +5,58 @@
    <meta charset="utf-8" />
    <meta name=viewport" content="width=device-width, initial-scale=1" />
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+   <link rel="stylesheet" href="confs.css" />
    <title>TP Integrador Frontend - Java Fullstack - Codo a Codo 4.0</title>
 </head>
 
 <body>
-   <header class="bg-grey">
-      <a class="d-flex align-items-center mb-3 mb-mb-0 md-mb-auto text-white" href="#">
-         <img src="images/codoacodo.png" width="48" height="32"></img>
-         <span class="fs-4">Conf Bs As</span>
-         <ul class="nav nav-pills">
-            <li class="nav-item"></li>
-            <li class="nav-item"></li>
-            <li class="nav-item"></li>
-            <li class="nav-item"></li>
-            <li class="nav-item"></li>
-         </ul>
-      </a>
+   <header>
+      <nav class="navbar navbar-expand-lg navbar-dark navbar-bg-color px-5">
+         <div class="container-fluid px-5">
+            <a class="navbar-brand" href="#">
+               <img class="logo-img" src="images/codoacodo.png" alt="logo" />
+               <span class="fs-5">Conf Bs As</span>
+            </a>
+            <!--
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    -->
+            <ul class="navbar-nav navbar-right">
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Los oradores</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">El lugar y la fecha</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Conviérte en orador</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link nav-link-s navbar-link-item" href="#">Comprar tickets</a>
+               </li>
+            </ul>
+         </div>
+       </nav>
    </header>
-   <main>
+   <main class="container-fluid">
+      <div class="container">
+         
+      </div>
    </main>
-   <footer>
+   <footer class="container-fluid text-center footer-bg-color align-items-end">
+     <div class="row align-items-center justify-content-around px-5 py-3 mx-3">
+      <div class="col-1 text-wrap footer-text footer-text-color">Preguntas frecuentes</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Contáctanos</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Prensa</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Conferencias</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Términos y condiciones</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Privacidad</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Estudiantes</div>
+     </div>
    </footer>
 </body>
 
