--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
    <meta charset="utf-8" />
    <meta name=viewport" content="width=device-width, initial-scale=1" />
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-   <link rel="stylesheet" href="confs.css" />
+   <link href="/css/bootstrap.min.css" rel="stylesheet" />
+   <link rel="stylesheet" href="/css/confs.css" />
    <title>TP Integrador Frontend - Java Fullstack - Codo a Codo 4.0</title>
 </head>
 
