--- a/buy-tickets.html
+++ b/buy-tickets.html
@@ -2,12 +2,39 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <link href="/css/bootstrap.min.css" rel="stylesheet" />
+   <link rel="stylesheet" href="/css/confs.css" />
    <title>Comprando Tickets</title>
 </head>
-<body>
-   <header></header>
+<body class="bg-dark">
+   <header>
+      <nav class="navbar navbar-expand-lg navbar-dark navbar-bg-color px-5">
+         <div class="container-fluid px-5">
+            <a class="navbar-brand" href="/">
+               <img class="logo-img" src="images/codoacodo.png" alt="logo" />
+               <span class="fs-5">Conf Bs As</span>
+            </a>
+            <ul class="navbar-nav navbar-right">
+               <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="/#confs">La conferencia</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/#oradores">Los oradores</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/#lugar">El lugar y la fecha</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/#inscripcion">Conviérte en orador</a>
+               </li>
+               <li class="nav-item active">
+                  <strong class="nav-link nav-link-s navbar-link-item">Comprar tickets</strong>
+               </li>
+            </ul>
+         </div>
+       </nav>
+   </header>
    <main></main>
 </body>
 </html>
