se agregó el footer

--- a/buy-tickets.html
+++ b/buy-tickets.html
@@ -37,7 +37,21 @@
          </div>
       </nav>
    </header>
-   <main></main>
+   <main>
+
+   </main>
+
+   <footer class="container-fluid text-center footer-bg-color align-items-end">
+     <div class="row align-items-center justify-content-around px-5 py-3 mx-3">
+      <div class="col-1 text-wrap footer-text footer-text-color">Preguntas frecuentes</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Contáctanos</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Prensa</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Conferencias</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Términos y condiciones</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Privacidad</div>
+      <div class="col-1 text-wrap footer-text footer-text-color">Estudiantes</div>
+     </div>
+   </footer>
 </body>
 
 </html>
