--- a/index.html
+++ b/index.html
@@ -152,14 +152,15 @@
                   <small class="col" style="font-size: 10px;">Recuerda incluir un título para tu charla</small>
                </div>
             </div>
-            <div class="row">
-               <strong class="col text-light text-center rounded-1 p-2 my-2" style="background-color: #96c93e;">
+            <div class="row"> <!--style="background-color: #96c93e;"-->
+               <strong class="col text-light text-center rounded-1 p-2 my-2 bg-buttons">
                   Enviar
                </strong>
             </div>
          </div>
       </div>
    </main>
+
    <footer class="container-fluid text-center footer-bg-color align-items-end">
      <div class="row align-items-center justify-content-around px-5 py-3 mx-3">
       <div class="col-1 text-wrap footer-text footer-text-color">Preguntas frecuentes</div>
