--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                   <small class="col" style="font-size: 10px;">Recuerda incluir un título para tu charla</small>
                </div>
             </div>
-            <div class="row"> <!--style="background-color: #96c93e;"-->
-               <strong class="col text-light text-center rounded-1 p-2 my-2 bg-buttons">
+            <div class="row">
+               <strong class="col text-light text-center rounded-1 p-2 my-2" style="background-color: #96c93e;">
                   Enviar
                </strong>
             </div>
